# tatsunari-sounds

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  roadmap.toml
archive/plugins/granular-delay/: CMakeLists.txt  plugin.toml
archive/plugins/mochi-stretch/: CMakeLists.txt  plugin.toml
archive/plugins/omoide-echo/: CMakeLists.txt  plugin.toml
archive/plugins/onsen-delay/: CMakeLists.txt
archive/plugins/saturator/: CMakeLists.txt
archive/plugins/shimmer-reverb/: CMakeLists.txt  plugin.toml
core/tests/: CMakeLists.txt  linear_ramp_test.cpp  pitch_detector_test.cpp  primitives_test.cpp  psola_shifter_test.cpp
params/tests/: CMakeLists.txt  params_test.cpp
plugins/bus-compressor/: CMakeLists.txt  plugin.toml
plugins/bus-compressor/Source/: FactoryLookAndFeel.h  FactoryPresets.h  GainReductionMeter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/bus-compressor/tests/: dsp_test.cpp  preset_test.cpp
plugins/dynamic-eq/: CMakeLists.txt  DeqCore.h  DeqParams.h  DeqStateMigration.h  plugin.toml
plugins/dynamic-eq/Source/: BandControlPanel.h  EqCurveComponent.h  FactoryLookAndFeel.h  FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/dynamic-eq/shell/: CMakeLists.txt  ClapEntry.cpp  DeqClapEditor.cpp  DeqClapEditor.h
plugins/dynamic-eq/tests/: deqcore_equiv_test.cpp  dsp_test.cpp  preset_test.cpp
plugins/dynamic-eq/ui/: DeqBandPanel.cpp  DeqBandPanel.h  DeqCurveView.cpp  DeqCurveView.h  DeqEditor.cpp  DeqEditor.h  DeqFeedFromCore.h  DeqIcons.h  DeqModels.h
plugins/fuzznari/: CMakeLists.txt  plugin.toml
plugins/fuzznari/Source/: FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/fuzznari/tests/: dsp_test.cpp  preset_test.cpp
plugins/granular-delay/: CMakeLists.txt  plugin.toml
plugins/granular-delay/Source/: FactoryLookAndFeel.h  GrainCloudComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/granular-delay/tests/: dsp_test.cpp  preset_test.cpp
plugins/multiband-enhancer/: CMakeLists.txt  plugin.toml
plugins/multiband-enhancer/Source/: AnalyzerComponent.h  BandStripComponent.h  FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/multiband-enhancer/tests/: dsp_test.cpp  preset_test.cpp
plugins/nam-player/: CMakeLists.txt  plugin.toml
plugins/nam-player/Source/: FactoryPresets.h  ModelHandoff.h  NamModel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/nam-player/tests/: dsp_test.cpp  preset_test.cpp
plugins/pitch-fix/: CMakeLists.txt  PfCore.h  PfParams.h  PfPresets.h  plugin.toml
plugins/pitch-fix/shell/: CMakeLists.txt  ClapEntry.cpp  PfClapEditor.cpp  PfClapEditor.h  PfClapEntry.h  PfClapEntryPoint.cpp
plugins/pitch-fix/tests/: dsp_test.cpp  preset_test.cpp
plugins/pitch-fix/ui/: PfEditor.cpp  PfEditor.h  PfModels.h
plugins/resonance-suppressor/: CMakeLists.txt  RsCore.h  plugin.toml
plugins/resonance-suppressor/Source/: AnalyzerDevPanel.h  AnalyzerStyle.h  DetailParam.h  FactoryPresets.h  NodePanel.h  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RsLookAndFeel.h  RsTheme.h  RsWidgets.h  StateMigration.h  SuppressionCurveComponent.h
plugins/resonance-suppressor/shell/: CMakeLists.txt  ClapEntry.cpp  RsClapEditor.cpp  RsClapEditor.h  RsClapEntry.h  RsClapEntryPoint.cpp
plugins/resonance-suppressor/tests/: clap_shell_test.cpp  dsp_test.cpp  preset_test.cpp  rscore_equiv_test.cpp
plugins/resonance-suppressor/ui/: RsAbState.h  RsEditor.cpp  RsEditor.h  RsFeed.h  RsFeedFromCore.h  RsFooterLayout.h  RsFreqEntry.h  RsIcons.h  RsModels.h  RsNodePanel.cpp  RsNodePanel.h  RsNodePanelLayout.h  RsPillCell.h  RsProfileModel.h  RsSuppressionCurveView.cpp  RsSuppressionCurveView.h  RsTheme.h  theme-rs.json
plugins/saturator/: CMakeLists.txt  plugin.toml
plugins/saturator/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TransferCurveComponent.h
plugins/saturator/tests/: dsp_test.cpp  preset_test.cpp
plugins/shimmer-reverb/: CMakeLists.txt  plugin.toml
plugins/shimmer-reverb/Source/: FactoryLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbVisualizer.h
plugins/shimmer-reverb/tests/: dsp_test.cpp  preset_test.cpp
plugins/single-band-eq/: CMakeLists.txt  plugin.toml
plugins/single-band-eq/Source/: PluginProcessor.cpp  PluginProcessor.h
plugins/single-band-eq/tests/: dsp_test.cpp
plugins/surikire/: CMakeLists.txt  plugin.toml
plugins/surikire/Source/: FactoryPresets.h  PluginEditor.cpp
plugins/surikire/tests/: dsp_test.cpp  preset_test.cpp
plugins/tumble-delay/: CMakeLists.txt  plugin.toml
plugins/tumble-delay/Source/: FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TumbleVisualizer.h
plugins/tumble-delay/tests/: dsp_test.cpp  preset_test.cpp
plugins/vocal-mbcomp/: CMakeLists.txt  plugin.toml
plugins/vocal-mbcomp/Source/: BandMeter.h  FactoryLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/vocal-mbcomp/tests/: dsp_test.cpp  preset_test.cpp
presets/tests/: CMakeLists.txt  presets_test.cpp
shell/: CMakeLists.txt
shell/cmake/: FactoryClapPlugin.cmake
shell/include/factory_shell/: ClapEditor.h  ClapEntryPoint.h  ClapParamBridge.h  ClapShellPlugin.h  ClapStateBridge.h  DenormalGuard.h  ResizableEditorGeometry.h
shell/src/: ClapParamBridge.cpp  ClapStateBridge.cpp  FactoryClapEntryPoint.cpp
tools/ui-dev/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dev.ps1  dev.sh  dev_server.py  harness.js  setup.ps1  setup.sh  shell.html  theme.json
tools/ui-dev/common/: BridgeCommon.h
tools/ui-dev/gallery/: Bridge.cpp  Bridge.h  GalleryFrame.cpp  GalleryFrame.h  main.cpp
tools/ui-dev/playwright/: drive.js  rs.spec.js  smoke.js
tools/vst3-probe/: CMakeLists.txt  vst3_probe.cpp
ui/visage/: CMakeLists.txt
ui/visage/src/: Chrome.cpp  (+14 more)
(+277 files in other folders)
